refactor: Use XML delimiters for LLM prompts
The previous markdown-based delimiters for PKGBUILD, source files,
and git diffs have been replaced with XML tags (<PKGBUILD>,
<source_file>, <git_diff>).

This is expected to improve the reliability of LLM output parsing.

--- a/TODO.org
+++ b/TODO.org
@@ -1,4 +1,5 @@
-* TODO Use <PKGBUILD></PKGBUILD> delimiters instead of PKGBUILD CONTENT: with markdown triple-backticks
+* DONE Use <PKGBUILD></PKGBUILD> delimiters instead of PKGBUILD CONTENT: with markdown triple-backticks
+  CLOSED: [2025-08-03 Sun 18:33]
 
 XML seems to be processed better by LLMs.
 * TODO Make the session class a little smarter
