--- a/TODO.org
+++ b/TODO.org
@@ -12,3 +12,17 @@ Just use python logging framework and send it to the tmp debug log file.
 Currently we only flush the logs at the end, but sometimes things get
 hung before that. We should configure `logging` to get logs right
 away.
+* TODO Send recursive file listing to agent and remove listdir tool
+Agent can decide which files (possibly all) to read
+
+In order to maintain its own state, I think the agent is going to need a
+"WriteFile" tool to keep a checklist of files it needs to review. Or do you
+think it will be able to keep it in its context? I worry that it will
+forget since it could be reading some huge files, so the history of files
+it has already read is going to fall out of context. It's almost like
+during the code review portion it would be a "recursive" agentic LLM call,
+don't need the full audit conversation history to perform a code review of
+a single file. And the audit conversation history only needs to record the
+outcome of the review in its context, not the code listing or the code
+review / audit report. What's the canonical/proper way to handle this in an
+agentic LLM loop?
