--- a/TODO.org
+++ b/TODO.org
@@ -1,11 +1,3 @@
-* DONE Use <PKGBUILD></PKGBUILD> delimiters instead of PKGBUILD CONTENT: with markdown triple-backticks
-  CLOSED: [2025-08-03 Sun 18:33]
-
-XML seems to be processed better by LLMs.
-* TODO Make the session class a little smarter
-It should actually encapsulate the LLM calls. The OpenAI client will live
-inside the session class. That way it can track sizes internally without
-callers having to track sizes.
 * TODO Improve debug logging
 Just use python logging framework and send it to the tmp debug log file.
 
@@ -26,3 +18,5 @@ a single file. And the audit conversation history only needs to record the
 outcome of the review in its context, not the code listing or the code
 review / audit report. What's the canonical/proper way to handle this in an
 agentic LLM loop?
+* TODO API cost
+Is this info available in the API response or through some OpenRouter API?
