TODO: Better file selection

--- a/TODO.org
+++ b/TODO.org
@@ -1,2 +1,4 @@
 * TODO API cost
 Is this info available in the API response or through some OpenRouter API?
+* TODO Make file selection (much) smarter.
+When auditing `yay`, for example, it pulls in random dependencies. Unless we're auditing absolutely everything we should make the filtering more intelligent. might need the agent to do a source dive, give it some tools (listdir, readfile)
